P2/Arrays/01/var/archive/xmlreports/0/0/0/000002
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="2" judge-id="1" status="CE" scoring="ACM" run-tests="0" contest-id="201" compile-error="yes" >
  <uuid>8995940d-9f8d-47d2-9121-e0e1ce68e2c4</uuid>
  <compiler_output>000002.cpp: In function 'int main()':
000002.cpp:7:5: error: 'i' was not declared in this scope
 for(i=0;i&lt;10;++i){
     ^
000002.cpp:8:3: error: 'count' was not declared in this scope
   count&lt;&lt;a[i];};
   ^~~~~
</compiler_output>
</testing-report>
